[gd_scene load_steps=96 format=3 uid="uid://b8gppbsqedfnh"]

[ext_resource type="Script" path="res://scripts/menus/login.gd" id="1"]
[ext_resource type="FontFile" uid="uid://bma5gan1gem4t" path="res://fonts/Uechi Gothic.ttf" id="2"]
[ext_resource type="FontFile" uid="uid://bmj83q0c8lwno" path="res://fonts/aAbsoluteEmpire.otf" id="3"]
[ext_resource type="FontFile" uid="uid://dv2tf3mlq3lgf" path="res://fonts/Royal Kevino.otf" id="4"]
[ext_resource type="Texture2D" uid="uid://cenyp43q6ff67" path="res://images/wallpaperflare.com_wallpaper.jpg" id="5"]
[ext_resource type="Theme" uid="uid://bir7klqliay2t" path="res://themes/main_theme.tres" id="6"]
[ext_resource type="Texture2D" uid="uid://coy12xc73t3ec" path="res://images/logospritesheets/arcadiaspritesheet2_671x241_671x241.png" id="7"]

[sub_resource type="FontFile" id="2"]
fallbacks = Array[Font]([ExtResource("3")])
face_index = null
embolden = null
transform = null
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="FontFile" id="3"]
fallbacks = Array[Font]([ExtResource("3")])
face_index = null
embolden = null
transform = null
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="FontFile" id="16"]
fallbacks = Array[Font]([ExtResource("4")])
face_index = null
embolden = null
transform = null
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="FontFile" id="5"]
fallbacks = Array[Font]([ExtResource("2")])
face_index = null
embolden = null
transform = null
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="FontFile" id="11"]
fallbacks = Array[Font]([ExtResource("2")])
face_index = null
embolden = null
transform = null
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="FontFile" id="12"]
fallbacks = Array[Font]([ExtResource("2")])
face_index = null
embolden = null
transform = null
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="FontFile" id="13"]
fallbacks = Array[Font]([ExtResource("2")])
face_index = null
embolden = null
transform = null
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="Animation" id="17"]
resource_name = "fadein"
length = 4.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("NinePatchRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3, 3.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 2, 3),
"transitions": PackedFloat32Array(1, 0.5, 0.5),
"update": 0,
"values": [Vector2(512, 300), Vector2(512, 300), Vector2(512, 70)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3rdgo"]
_data = {
"fadein": SubResource("17")
}

[sub_resource type="AtlasTexture" id="122"]
atlas = ExtResource("7")
region = Rect2(3355, 723, 671, 241)

[sub_resource type="AtlasTexture" id="123"]
atlas = ExtResource("7")
region = Rect2(4026, 723, 671, 241)

[sub_resource type="AtlasTexture" id="124"]
atlas = ExtResource("7")
region = Rect2(4697, 723, 671, 241)

[sub_resource type="AtlasTexture" id="125"]
atlas = ExtResource("7")
region = Rect2(5368, 723, 671, 241)

[sub_resource type="AtlasTexture" id="126"]
atlas = ExtResource("7")
region = Rect2(6039, 723, 671, 241)

[sub_resource type="AtlasTexture" id="127"]
atlas = ExtResource("7")
region = Rect2(6710, 723, 671, 241)

[sub_resource type="AtlasTexture" id="128"]
atlas = ExtResource("7")
region = Rect2(7381, 723, 671, 241)

[sub_resource type="AtlasTexture" id="129"]
atlas = ExtResource("7")
region = Rect2(0, 964, 671, 241)

[sub_resource type="AtlasTexture" id="130"]
atlas = ExtResource("7")
region = Rect2(671, 964, 671, 241)

[sub_resource type="AtlasTexture" id="131"]
atlas = ExtResource("7")
region = Rect2(1342, 964, 671, 241)

[sub_resource type="AtlasTexture" id="132"]
atlas = ExtResource("7")
region = Rect2(2013, 964, 671, 241)

[sub_resource type="AtlasTexture" id="133"]
atlas = ExtResource("7")
region = Rect2(2684, 964, 671, 241)

[sub_resource type="AtlasTexture" id="134"]
atlas = ExtResource("7")
region = Rect2(3355, 964, 671, 241)

[sub_resource type="AtlasTexture" id="135"]
atlas = ExtResource("7")
region = Rect2(4026, 964, 671, 241)

[sub_resource type="AtlasTexture" id="136"]
atlas = ExtResource("7")
region = Rect2(4697, 964, 671, 241)

[sub_resource type="AtlasTexture" id="137"]
atlas = ExtResource("7")
region = Rect2(5368, 964, 671, 241)

[sub_resource type="AtlasTexture" id="138"]
atlas = ExtResource("7")
region = Rect2(6039, 964, 671, 241)

[sub_resource type="AtlasTexture" id="139"]
atlas = ExtResource("7")
region = Rect2(6710, 964, 671, 241)

[sub_resource type="AtlasTexture" id="140"]
atlas = ExtResource("7")
region = Rect2(7381, 964, 671, 241)

[sub_resource type="AtlasTexture" id="141"]
atlas = ExtResource("7")
region = Rect2(0, 1205, 671, 241)

[sub_resource type="AtlasTexture" id="142"]
atlas = ExtResource("7")
region = Rect2(671, 1205, 671, 241)

[sub_resource type="AtlasTexture" id="143"]
atlas = ExtResource("7")
region = Rect2(1342, 1205, 671, 241)

[sub_resource type="AtlasTexture" id="144"]
atlas = ExtResource("7")
region = Rect2(2013, 1205, 671, 241)

[sub_resource type="AtlasTexture" id="145"]
atlas = ExtResource("7")
region = Rect2(2684, 1205, 671, 241)

[sub_resource type="AtlasTexture" id="146"]
atlas = ExtResource("7")
region = Rect2(3355, 1205, 671, 241)

[sub_resource type="AtlasTexture" id="147"]
atlas = ExtResource("7")
region = Rect2(4026, 1205, 671, 241)

[sub_resource type="AtlasTexture" id="148"]
atlas = ExtResource("7")
region = Rect2(4697, 1205, 671, 241)

[sub_resource type="AtlasTexture" id="149"]
atlas = ExtResource("7")
region = Rect2(5368, 1205, 671, 241)

[sub_resource type="AtlasTexture" id="150"]
atlas = ExtResource("7")
region = Rect2(6039, 1205, 671, 241)

[sub_resource type="AtlasTexture" id="151"]
atlas = ExtResource("7")
region = Rect2(6710, 1205, 671, 241)

[sub_resource type="AtlasTexture" id="152"]
atlas = ExtResource("7")
region = Rect2(7381, 1205, 671, 241)

[sub_resource type="AtlasTexture" id="153"]
atlas = ExtResource("7")
region = Rect2(0, 1446, 671, 241)

[sub_resource type="AtlasTexture" id="154"]
atlas = ExtResource("7")
region = Rect2(671, 1446, 671, 241)

[sub_resource type="AtlasTexture" id="155"]
atlas = ExtResource("7")
region = Rect2(1342, 1446, 671, 241)

[sub_resource type="AtlasTexture" id="156"]
atlas = ExtResource("7")
region = Rect2(2013, 1446, 671, 241)

[sub_resource type="AtlasTexture" id="157"]
atlas = ExtResource("7")
region = Rect2(2684, 1446, 671, 241)

[sub_resource type="AtlasTexture" id="158"]
atlas = ExtResource("7")
region = Rect2(3355, 1446, 671, 241)

[sub_resource type="AtlasTexture" id="159"]
atlas = ExtResource("7")
region = Rect2(4026, 1446, 671, 241)

[sub_resource type="AtlasTexture" id="160"]
atlas = ExtResource("7")
region = Rect2(4697, 1446, 671, 241)

[sub_resource type="AtlasTexture" id="161"]
atlas = ExtResource("7")
region = Rect2(5368, 1446, 671, 241)

[sub_resource type="AtlasTexture" id="162"]
atlas = ExtResource("7")
region = Rect2(6039, 1446, 671, 241)

[sub_resource type="AtlasTexture" id="163"]
atlas = ExtResource("7")
region = Rect2(6710, 1446, 671, 241)

[sub_resource type="AtlasTexture" id="164"]
atlas = ExtResource("7")
region = Rect2(7381, 1446, 671, 241)

[sub_resource type="AtlasTexture" id="165"]
atlas = ExtResource("7")
region = Rect2(0, 1687, 671, 241)

[sub_resource type="AtlasTexture" id="166"]
atlas = ExtResource("7")
region = Rect2(671, 1687, 671, 241)

[sub_resource type="AtlasTexture" id="167"]
atlas = ExtResource("7")
region = Rect2(1342, 1687, 671, 241)

[sub_resource type="AtlasTexture" id="168"]
atlas = ExtResource("7")
region = Rect2(2013, 1687, 671, 241)

[sub_resource type="AtlasTexture" id="169"]
atlas = ExtResource("7")
region = Rect2(2684, 1687, 671, 241)

[sub_resource type="AtlasTexture" id="170"]
atlas = ExtResource("7")
region = Rect2(3355, 1687, 671, 241)

[sub_resource type="AtlasTexture" id="171"]
atlas = ExtResource("7")
region = Rect2(4026, 1687, 671, 241)

[sub_resource type="AtlasTexture" id="172"]
atlas = ExtResource("7")
region = Rect2(4697, 1687, 671, 241)

[sub_resource type="AtlasTexture" id="173"]
atlas = ExtResource("7")
region = Rect2(5368, 1687, 671, 241)

[sub_resource type="AtlasTexture" id="174"]
atlas = ExtResource("7")
region = Rect2(6039, 1687, 671, 241)

[sub_resource type="AtlasTexture" id="175"]
atlas = ExtResource("7")
region = Rect2(6710, 1687, 671, 241)

[sub_resource type="AtlasTexture" id="176"]
atlas = ExtResource("7")
region = Rect2(7381, 1687, 671, 241)

[sub_resource type="AtlasTexture" id="177"]
atlas = ExtResource("7")
region = Rect2(0, 1928, 671, 241)

[sub_resource type="AtlasTexture" id="178"]
atlas = ExtResource("7")
region = Rect2(671, 1928, 671, 241)

[sub_resource type="AtlasTexture" id="179"]
atlas = ExtResource("7")
region = Rect2(1342, 1928, 671, 241)

[sub_resource type="AtlasTexture" id="180"]
atlas = ExtResource("7")
region = Rect2(2013, 1928, 671, 241)

[sub_resource type="AtlasTexture" id="181"]
atlas = ExtResource("7")
region = Rect2(2684, 1928, 671, 241)

[sub_resource type="AtlasTexture" id="182"]
atlas = ExtResource("7")
region = Rect2(3355, 1928, 671, 241)

[sub_resource type="AtlasTexture" id="183"]
atlas = ExtResource("7")
region = Rect2(4026, 1928, 671, 241)

[sub_resource type="AtlasTexture" id="184"]
atlas = ExtResource("7")
region = Rect2(4697, 1928, 671, 241)

[sub_resource type="AtlasTexture" id="185"]
atlas = ExtResource("7")
region = Rect2(5368, 1928, 671, 241)

[sub_resource type="AtlasTexture" id="186"]
atlas = ExtResource("7")
region = Rect2(6039, 1928, 671, 241)

[sub_resource type="AtlasTexture" id="187"]
atlas = ExtResource("7")
region = Rect2(6710, 1928, 671, 241)

[sub_resource type="AtlasTexture" id="188"]
atlas = ExtResource("7")
region = Rect2(7381, 1928, 671, 241)

[sub_resource type="AtlasTexture" id="189"]
atlas = ExtResource("7")
region = Rect2(0, 2169, 671, 241)

[sub_resource type="AtlasTexture" id="190"]
atlas = ExtResource("7")
region = Rect2(671, 2169, 671, 241)

[sub_resource type="AtlasTexture" id="191"]
atlas = ExtResource("7")
region = Rect2(1342, 2169, 671, 241)

[sub_resource type="AtlasTexture" id="192"]
atlas = ExtResource("7")
region = Rect2(2013, 2169, 671, 241)

[sub_resource type="AtlasTexture" id="193"]
atlas = ExtResource("7")
region = Rect2(2684, 2169, 671, 241)

[sub_resource type="AtlasTexture" id="194"]
atlas = ExtResource("7")
region = Rect2(3355, 2169, 671, 241)

[sub_resource type="AtlasTexture" id="195"]
atlas = ExtResource("7")
region = Rect2(4026, 2169, 671, 241)

[sub_resource type="AtlasTexture" id="196"]
atlas = ExtResource("7")
region = Rect2(4697, 2169, 671, 241)

[sub_resource type="AtlasTexture" id="197"]
atlas = ExtResource("7")
region = Rect2(5368, 2169, 671, 241)

[sub_resource type="AtlasTexture" id="198"]
atlas = ExtResource("7")
region = Rect2(6039, 2169, 671, 241)

[sub_resource type="AtlasTexture" id="199"]
atlas = ExtResource("7")
region = Rect2(6710, 2169, 671, 241)

[sub_resource type="SpriteFrames" id="200"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("122")
}, {
"duration": 1.0,
"texture": SubResource("123")
}, {
"duration": 1.0,
"texture": SubResource("124")
}, {
"duration": 1.0,
"texture": SubResource("125")
}, {
"duration": 1.0,
"texture": SubResource("126")
}, {
"duration": 1.0,
"texture": SubResource("127")
}, {
"duration": 1.0,
"texture": SubResource("128")
}, {
"duration": 1.0,
"texture": SubResource("129")
}, {
"duration": 1.0,
"texture": SubResource("130")
}, {
"duration": 1.0,
"texture": SubResource("131")
}, {
"duration": 1.0,
"texture": SubResource("132")
}, {
"duration": 1.0,
"texture": SubResource("133")
}, {
"duration": 1.0,
"texture": SubResource("134")
}, {
"duration": 1.0,
"texture": SubResource("135")
}, {
"duration": 1.0,
"texture": SubResource("136")
}, {
"duration": 1.0,
"texture": SubResource("137")
}, {
"duration": 1.0,
"texture": SubResource("138")
}, {
"duration": 1.0,
"texture": SubResource("139")
}, {
"duration": 1.0,
"texture": SubResource("140")
}, {
"duration": 1.0,
"texture": SubResource("141")
}, {
"duration": 1.0,
"texture": SubResource("142")
}, {
"duration": 1.0,
"texture": SubResource("143")
}, {
"duration": 1.0,
"texture": SubResource("144")
}, {
"duration": 1.0,
"texture": SubResource("145")
}, {
"duration": 1.0,
"texture": SubResource("146")
}, {
"duration": 1.0,
"texture": SubResource("147")
}, {
"duration": 1.0,
"texture": SubResource("148")
}, {
"duration": 1.0,
"texture": SubResource("149")
}, {
"duration": 1.0,
"texture": SubResource("150")
}, {
"duration": 1.0,
"texture": SubResource("151")
}, {
"duration": 1.0,
"texture": SubResource("152")
}, {
"duration": 1.0,
"texture": SubResource("153")
}, {
"duration": 1.0,
"texture": SubResource("154")
}, {
"duration": 1.0,
"texture": SubResource("155")
}, {
"duration": 1.0,
"texture": SubResource("156")
}, {
"duration": 1.0,
"texture": SubResource("157")
}, {
"duration": 1.0,
"texture": SubResource("158")
}, {
"duration": 1.0,
"texture": SubResource("159")
}, {
"duration": 1.0,
"texture": SubResource("160")
}, {
"duration": 1.0,
"texture": SubResource("161")
}, {
"duration": 1.0,
"texture": SubResource("162")
}, {
"duration": 1.0,
"texture": SubResource("163")
}, {
"duration": 1.0,
"texture": SubResource("164")
}, {
"duration": 1.0,
"texture": SubResource("165")
}, {
"duration": 1.0,
"texture": SubResource("166")
}, {
"duration": 1.0,
"texture": SubResource("167")
}, {
"duration": 1.0,
"texture": SubResource("168")
}, {
"duration": 1.0,
"texture": SubResource("169")
}, {
"duration": 1.0,
"texture": SubResource("170")
}, {
"duration": 1.0,
"texture": SubResource("171")
}, {
"duration": 1.0,
"texture": SubResource("172")
}, {
"duration": 1.0,
"texture": SubResource("173")
}, {
"duration": 1.0,
"texture": SubResource("174")
}, {
"duration": 1.0,
"texture": SubResource("175")
}, {
"duration": 1.0,
"texture": SubResource("176")
}, {
"duration": 1.0,
"texture": SubResource("177")
}, {
"duration": 1.0,
"texture": SubResource("178")
}, {
"duration": 1.0,
"texture": SubResource("179")
}, {
"duration": 1.0,
"texture": SubResource("180")
}, {
"duration": 1.0,
"texture": SubResource("181")
}, {
"duration": 1.0,
"texture": SubResource("182")
}, {
"duration": 1.0,
"texture": SubResource("183")
}, {
"duration": 1.0,
"texture": SubResource("184")
}, {
"duration": 1.0,
"texture": SubResource("185")
}, {
"duration": 1.0,
"texture": SubResource("186")
}, {
"duration": 1.0,
"texture": SubResource("187")
}, {
"duration": 1.0,
"texture": SubResource("188")
}, {
"duration": 1.0,
"texture": SubResource("189")
}, {
"duration": 1.0,
"texture": SubResource("190")
}, {
"duration": 1.0,
"texture": SubResource("191")
}, {
"duration": 1.0,
"texture": SubResource("192")
}, {
"duration": 1.0,
"texture": SubResource("193")
}, {
"duration": 1.0,
"texture": SubResource("194")
}, {
"duration": 1.0,
"texture": SubResource("195")
}, {
"duration": 1.0,
"texture": SubResource("196")
}, {
"duration": 1.0,
"texture": SubResource("197")
}, {
"duration": 1.0,
"texture": SubResource("198")
}, {
"duration": 1.0,
"texture": SubResource("199")
}],
"loop": true,
"name": &"default",
"speed": 60.0
}]

[node name="LoginScreen" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -512.0
offset_top = -300.0
offset_right = 512.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1")

[node name="WallpaperflarecomWallpaper" type="Sprite2D" parent="."]
visible = false
position = Vector2(651, 402)
texture = ExtResource("5")

[node name="NinePatchRect" type="Panel" parent="."]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(300, 300)
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -150.0
offset_right = 150.0
offset_bottom = 150.0
theme = ExtResource("6")

[node name="LoginBox" type="VBoxContainer" parent="NinePatchRect"]
layout_mode = 0
anchor_left = 0.04
anchor_right = 0.963333
anchor_bottom = 0.99

[node name="TitleMargin" type="MarginContainer" parent="NinePatchRect/LoginBox"]
custom_minimum_size = Vector2(0, 45)
layout_mode = 2

[node name="UsernameTitle" type="Label" parent="NinePatchRect/LoginBox"]
layout_mode = 2
theme_override_fonts/font = SubResource("2")
text = "Username"

[node name="Username" type="LineEdit" parent="NinePatchRect/LoginBox"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
placeholder_text = "Enter Username"
caret_blink = true

[node name="TitleMargin2" type="MarginContainer" parent="NinePatchRect/LoginBox"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2

[node name="PasswordTitle" type="Label" parent="NinePatchRect/LoginBox"]
layout_mode = 2
theme_override_fonts/font = SubResource("3")
text = "Password"

[node name="Password" type="LineEdit" parent="NinePatchRect/LoginBox"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
placeholder_text = "Enter Password"
caret_blink = true

[node name="ButtonMargin" type="MarginContainer" parent="NinePatchRect/LoginBox"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2

[node name="LoginError" type="Label" parent="NinePatchRect/LoginBox/ButtonMargin"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.388235, 0.388235, 1)
theme_override_fonts/font = SubResource("16")

[node name="LoginButton" type="Button" parent="NinePatchRect/LoginBox"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="Label" type="Label" parent="NinePatchRect/LoginBox/LoginButton"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 25.0
offset_right = -25.0
offset_bottom = 2.0
text = "Login"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CreateAccount" type="Button" parent="NinePatchRect/LoginBox"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme_override_fonts/font = SubResource("5")

[node name="Label" type="Label" parent="NinePatchRect/LoginBox/CreateAccount"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 4.0
text = "Create Account"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AccountBox" type="VBoxContainer" parent="NinePatchRect"]
visible = false
layout_mode = 0
anchor_left = 0.0390625
anchor_top = 0.0517241
anchor_right = 0.960938
anchor_bottom = 0.931035

[node name="UsernameTitle" type="Label" parent="NinePatchRect/AccountBox"]
layout_mode = 2
theme_override_fonts/font = SubResource("2")
text = "Username"

[node name="UsernameInput" type="LineEdit" parent="NinePatchRect/AccountBox"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="TitleMargin2" type="MarginContainer" parent="NinePatchRect/AccountBox"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="PasswordTitle" type="Label" parent="NinePatchRect/AccountBox"]
layout_mode = 2
theme_override_fonts/font = SubResource("3")
text = "Password"

[node name="PasswordInput" type="LineEdit" parent="NinePatchRect/AccountBox"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="ButtonMargin" type="MarginContainer" parent="NinePatchRect/AccountBox"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="PasswordTitle2" type="Label" parent="NinePatchRect/AccountBox"]
layout_mode = 2
theme_override_fonts/font = SubResource("3")
text = "Repeat Password"

[node name="RepeatPass" type="LineEdit" parent="NinePatchRect/AccountBox"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="Back" type="Button" parent="NinePatchRect/AccountBox"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="Label" type="Label" parent="NinePatchRect/AccountBox/Back"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 25.0
offset_top = 4.0
offset_right = -25.0
theme_override_fonts/font = SubResource("11")
text = "Back"

[node name="Confirm" type="Button" parent="NinePatchRect/AccountBox"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme_override_fonts/font = SubResource("12")

[node name="Label" type="Label" parent="NinePatchRect/AccountBox/Confirm"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 4.0
theme_override_fonts/font = SubResource("13")
text = "Confirm"

[node name="LoginAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_3rdgo")
}

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
position = Vector2(512, 300)
scale = Vector2(0.6, 0.6)
sprite_frames = SubResource("200")
autoplay = "default"
frame_progress = 0.435686

[connection signal="pressed" from="NinePatchRect/LoginBox/LoginButton" to="." method="_on_LoginButton_pressed"]
[connection signal="pressed" from="NinePatchRect/LoginBox/CreateAccount" to="." method="_on_CreateAccount_pressed"]
[connection signal="pressed" from="NinePatchRect/AccountBox/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="NinePatchRect/AccountBox/Confirm" to="." method="_on_Confirm_pressed"]
